--- a/practice/proj1.html
+++ b/practice/proj1.html
@@ -2,56 +2,71 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ApniJourney</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="proj1.css">
+    <link rel="stylesheet" href="proj1.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="container">
-        <input type="checkbox" id="check">
-        <div class="button1">
-            <label for="check">
-                <span id="menu" class="material-symbols-outlined">menu</span>
-            </label>
-        </div>
-        <div class="sidebar">
-            <div class="logo">
-                <a href="proj1.html">Apni Journey</a>
-            </div>
-            <div class="button2">
+    <header>
+
+    </header>
+    <main>
+        <div class="container-fluid">
+            <input type="checkbox" id="check" />
+            <div class="button1">
                 <label for="check">
-                    <span class="material-symbols-outlined">close</span>
+                    <span id="menu" class="material-symbols-outlined">menu</span>
                 </label>
             </div>
-            <div class="menu">
-                <ul>
-                    <li>
-                        <span class="material-symbols-outlined">your_trips</span>
-                        <a href="">Planning a Trip</a></li>
-                    <li>
-                        <span class="material-symbols-outlined">dining</span>
-                        <a href="">Food Service</a></li>
-                    <li>
-                        <span class="material-symbols-outlined">redeem</span>
-                        <a href="">Deals & Offers</a></li>
-                    <li>
-                        <span class="material-symbols-outlined">explore</span>
-                        <a href="">Explore</a></li>
-                    <li>
-                        <span class="material-symbols-outlined">support_agent</span>
-                        <a href="">Contact</a></li>
-                </ul>
+            <div class="sidebars">
+                <div class="logo">
+                    <a href="proj1.html">Apni Journey</a>
+                </div>
+                <div class="button2">
+                    <label for="check">
+                        <span class="material-symbols-outlined">close</span>
+                    </label>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li>
+                            <span class="material-symbols-outlined">your_trips</span>
+                            <a href="">Planning a Trip</a>
+                        </li>
+                        <li>
+                            <span class="material-symbols-outlined">dining</span>
+                            <a href="">Food Service</a>
+                        </li>
+                        <li>
+                            <span class="material-symbols-outlined">redeem</span>
+                            <a href="">Deals & Offers</a>
+                        </li>
+                        <li>
+                            <span class="material-symbols-outlined">explore</span>
+                            <a href="">Explore</a>
+                        </li>
+                        <li>
+                            <span class="material-symbols-outlined">support_agent</span>
+                            <a href="">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
