some new files added

--- a/practice/proj1.html
+++ b/practice/proj1.html
@@ -20,7 +20,7 @@
 
     </header>
     <main>
-        <div class="container-fluid">
+        <div class="side-menu">
             <input type="checkbox" id="check" />
             <div class="button1">
                 <label for="check">
